--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
                     <div class="gap">
                     <div class="col-sm-6 col-xs-12">
                         <span class="glyphicon glyphicon-earphone"></span>
-                        <a href="tel:123456789">302-465-7587</a>
+                        <a href="tel:3024657587">302-465-7587</a>
                     </div>
                      <div class="col-sm-6 col-xs-12">
                         <span class="glyphicon glyphicon-envelope"></span>
-                        <a href="mailto:get@bootstrap.com">Apachebright40@gmail.com</a>
+                        <a href="mailto:Apachebright40@gmail.com">Apachebright40@gmail.com</a>
                     </div>
                     </div>
                 
