--- a/index.html
+++ b/index.html
@@ -168,11 +168,11 @@
                     <d class="gap">
                     <div class="col-sm-6 col-xs-12">
                         <span class="glyphicon glyphicon-earphone"></span>
-                        <a href="tel:123456789">302-465-7587</a>
+                        <a href="tel:3024657587">302-465-7587</a>
                     </div>
                      <div class="col-sm-6 col-xs-12">
                         <span class="glyphicon glyphicon-envelope"></span>
-                        <a href="mailto:get@bootstrap.com">Apachebright40@gmail.com</a>
+                        <a href="mailto:apachebright40@gmail.com">Apachebright40@gmail.com</a>
                     </div>
                       <div class="col-sm-6 col-x2-12">
                         <span class="ig-link glyphicon-envelope"><a href="https://www.instagram.com/apachebright/">IG: @apachebright</a></span>
