--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   <div class="slide_viewer">
     <div class="slide_group">
       <div class="slide">
-        <img src="/Users/mikebradyy/Downloads/07BC21C1-D369-47EE-930A-8FEB50214C07.heic" />
+        <img src="/Users/mikebradyy/Downloads/compressed/IMG_5621.jpg" />
       </div>
       <div class="slide">
 	<img src="/Users/mikebradyy/Downloads/IMG_5737.HEIC" />
