--- a/index.html
+++ b/index.html
@@ -1,13 +1,3 @@
-<!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>CodePen - Apache Bright-Official Template</title>
-  <link rel="stylesheet" href="style.css">
-
-</head>
-<body>
-<!-- partial:index.partial.html -->
 <html lang="en">
 
 <head>
@@ -18,6 +8,7 @@
     <title>Apache Bright</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -125,14 +116,16 @@
   <div class="slide_viewer">
     <div class="slide_group">
       <div class="slide">
-        <img src="/Users/mikebradyy/Downloads/compressed/IMG_5621.jpg" />
+        <img src="https://previews.dropbox.com/p/thumb/ACEHNbxlf_F20LGPDrR1qvLUkn-2UXnjuauoQe2EZqjfksWrlJKmfOYK8rakmxI53Vvi210WWFDxBE3pdu7GZZL5yc9YWtZE8uSYUTEBa8LUD0MJRVVuRvbqFebj0VEYFZCrxIawAgsXyrMCEG56lDHTMtIC7t9AXZAHMDwsJEerOo6i6g9zlg-EL146HNEEEBqYS5ZkxizDleslwB4RKkOp3UMicWWYU0-7DcJYxzD4nbQoum10c8-4dh9ghEySvB6azTA2sGz7C4m2_LQEew3poZa9ZbxR93vzk--GvYEDbY1DyCtcac2KWus-ar34MC4eMeZ2PR6cwDHh6-BSrBLa/p.jpeg">
       </div>
       <div class="slide">
-	<img src="/Users/mikebradyy/Downloads/IMG_5737.HEIC" />
+        <img src="https://previews.dropbox.com/p/thumb/ACFSt15eUJ2r7DKtsGTSAED2z_dt23biTVOrsbdY2jFAv0k4XFibLfj8N_ClkVvyFqKocNAsVFA0TcgIuYJbrxl-dL-q3IUXViTic08V76DDaXxXfXVx_35MIhfnai2mi6dS2HlWxylJ2I-DvVUq_cHOq4dst5-A3J2Y6BFV0oFAWOsaPlKEtkvrGr_GUzlycuooElTr1Igbpnxm0zb2I7J_T3W91LeX57b_J0bf_J0O2CwkTkDYnHmayIjTvYcJZdpw6HrXuRhz9Zwrv6iTPWJUj4SDXECqBjEd1CmeYURbJI45kmxs4rIM3kjWfq9JQ_JEq5hDiduhIUyH3TiKMrzt/p.jpeg">
       </div>
       <div class="slide">
+        <img src="https://previews.dropbox.com/p/thumb/ACE9mzXVrXNBAoeSPskViJLW_FVM5180Czx9iJ38DHuquu_t18iZD8w8_TtbYKJK4XE0CgNqV9Q7B_cdAz1aW3Qiiv2aKGyMt-Nb2adGhi9FMNZbIDspBCtbKXUvaUw5qiy_ikpci3e-1dmKDFHBOygnvBN8x12gLm2Gp-Agx48aDH_FcE-9ieJwrLNlYGWZs4OxnmETWCl_AYDyFXSMUqK7ASRfSJ4k_qS7LIuQuBqzB1sP8WnfV4zJH2H92sYUnKrXrJmHWtidpi-MLTPK2kypbi90fjiXv9ZWHXBY1LFV_wZK0yZB8QnyxW6ej6QVd8nmd8efOEutDEPrZJKN7jNI/p.jpeg">
       </div>
       <div class="slide">
+        <img src="https://previews.dropbox.com/p/thumb/ACEGXBjjxaa3Oacyv6H0cje1ygbR4fm2UPJmu9yuLQLZoCCFjLQ2elK8rRio0cqdGyjo3rrGmPr2tELv4hsm-hM167gK8F5ubZ8n38znB8YRrbTgWG07RNV7pCMLy4iwYXS-ny6rieMDiEzZL3rwo4LIv3cEeZF1DNodm0zFn3V_R5rGagzgquCZ0vShF-Ei26zRdt63w6g4aDoAVzrPgql1ASglbiSp1fIyMP8TKDbLUEQB2hV5F40rr6YWSS4k9oew8MQc95TBaGX3lNbTyBzjjC7V5Xu1WKmdtd4LzTsqN2mGSpiJIynbYJvjAnTkzOVxftdCx6W02B9F5oVnYkKD/p.jpeg">
       </div>
     </div>
   </div>
@@ -207,11 +200,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script  src="script.js"></script>
 </body>
 
-</html>
-<!-- partial -->
-
-</body>
 </html>
