--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Apache Bright-Official Template</title>
+  <title>Apache Bright</title>
   <link rel="stylesheet" href="style.css">
 
 </head>
