--- a/index.html
+++ b/index.html
@@ -137,6 +137,18 @@
       <div class="slide">
         <img src="https://mikebrady0.github.io/Apache-Bright-Images/07BC21C1-D369-47EE-930A-8FEB50214C07.jpg">
       </div>
+      <div class="slide">
+        <img src="https://github.com/mikebrady0/Apache-Bright-Images/blob/main/Photo%20Dec%2021%202023,%203%2005%2025%20PM.jpg?raw=true">
+      </div>
+      <div class="slide">
+        <img src="https://github.com/mikebrady0/Apache-Bright-Images/blob/main/Photo%20Dec%2021%202023,%203%2008%2034%20PM.jpg?raw=true">
+      </div>
+      <div class="slide">
+        <img src="https://github.com/mikebrady0/Apache-Bright-Images/blob/main/Photo%20Dec%2021%202023,%203%2010%2030%20PM.jpg?raw=true">
+      </div>
+      <div class="slide">
+        <img src="https://github.com/mikebrady0/Apache-Bright-Images/blob/main/Photo%20Feb%2006%202024,%203%2030%2043%20PM.jpg?raw=true">
+      </div>
     </div>
   </div>
 </div><!-- End // .slider -->
